docs: 更新项目文档、规则与构建配置，清理过时 release-Archive XML
- 更新 AGENTS.md、CLAUDE.md 及各级目录规则文档，同步 Android arm64 迁移事实
- 更新 .claude/BUILD_GUIDE.md 与 .claude/RULES.md
- 重写 server/README.md v2.0：按当前工作树实物移除不存在路径的引用
- 移除 client/resource/bin/release-Archive/ 下过时的 XML 配置
- 更新 cocos2d.vcxproj 和 libExtensions.vcxproj 构建配置
- 同步 dependencies/build_vs2013/ 下 glew/libjpeg/libpng/libtiff/pthread/silly 的 vcxproj
- 修复 LuaEngineWin32.cpp 移除已删除枚举值引用
- 修复 tiffio.h 头文件兼容性